<resources>
    <string name="app_name">Hunting Grounds</string>

    <string name="catalog_fragment_text">here will be catalog…</string>
    <string name="favorites_fragment_text">here will be favorites…</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Vladyslav Yavorskyi</string>
    <string name="nav_header_subtitle">vlad.yavorsky.ua@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="map_type">Map type</string>
    <string name="map_type_normal">Normal</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_terrain">Terrain</string>

    <string name="menu_map">Map</string>
    <string name="menu_catalog">Catalog</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- Errors -->
    <string name="no_data_available">No data available</string>
    <string name="request_failure">Failed to obtain data</string>
    <string name="location_permission_denied">"To display your current location position, grant access to location permission."</string>

    <!-- Abbreviations -->
    <string name="thous_ha">thous. Ha.</string>
    <string name="oblast">obl.</string>

    <!-- Preferences -->
    <string name="database">Database</string>
    <string name="api_host">API Host</string>
    <string name="update">Update</string>
    <string name="update_success">Update success!</string>
    <string name="update_failed">Update failed!</string>
    <string name="invalid_url">Invalid URL</string>

    <!-- Preferences keys -->
    <string name="key_update">key_update</string>
    <string name="key_api_host">key_api_host</string>

</resources>
