<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/menu_map"/>
        <item
                android:id="@+id/nav_catalog"
                android:icon="@drawable/ic_menu_catalog"
                android:title="@string/menu_catalog"/>
        <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_menu_favorites"
                android:title="@string/menu_favorites"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings"/>
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
